// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip component should match snapshot - Any valid Chip with Avatar: Chip snapshot - with avatar 1`] = `
<div
  className="MuiChip-root"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <div
    className="MuiAvatar-root NatDsAvatar-root-16 MuiAvatar-circle MuiChip-avatar MuiAvatar-colorDefault"
  >
    XD
  </div>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with Icon: Chip snapshot - with icon 1`] = `
<div
  className="MuiChip-root"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add MuiChip-icon NatDSIcon-standardFontSize-4"
  >
    filled-action-add
  </i>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with custom deleteIcon: Chip snapshot - with custom deleteIcon 1`] = `
<div
  className="MuiChip-root MuiChip-deletable"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  />
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel MuiChip-deleteIcon NatDSIcon-standardFontSize-4"
    onClick={[Function]}
  >
    filled-action-cancel
  </i>
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default color: Chip snapshot - with default color 1`] = `
<div
  className="MuiChip-root"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default deleteIcon: Chip snapshot - with default deleteIcon 1`] = `
<div
  className="MuiChip-root MuiChip-deletable"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="MuiChip-label"
  />
  <i
    aria-hidden={true}
    className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-cancel MuiChip-deleteIcon NatDSIcon-standardFontSize-4"
    onClick={[Function]}
  >
    filled-action-cancel
  </i>
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with default variant: Chip snapshot - with default variant 1`] = `
<div
  className="MuiChip-root"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with medium size: Chip snapshot - with medium size 1`] = `
<div
  className="MuiChip-root"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with outlined variant: Chip snapshot - with outlined variant 1`] = `
<div
  className="MuiChip-root MuiChip-outlined"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with primary color: Chip snapshot - with primary color 1`] = `
<div
  className="MuiChip-root MuiChip-colorPrimary"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with secondary color: Chip snapshot - with secondary color 1`] = `
<div
  className="MuiChip-root MuiChip-colorSecondary"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label"
  />
</div>
`;

exports[`Chip component should match snapshot - Any valid Chip with small size: Chip snapshot - with small size 1`] = `
<div
  className="MuiChip-root MuiChip-sizeSmall"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
>
  <span
    className="MuiChip-label MuiChip-labelSmall"
  />
</div>
`;
